Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 .contenedor-calculadora {
     width: 370px;
-    height: 570px;
+    height: 580px;
     padding: 14px;
     background-color: #141414;
     border-radius: 60px;
